recursion.logo.square.FourSquare.scala.code
override def run() {
  def carre(x:double) {
    avance(x)
    droite(90.0)
    avance(x)
    droite(90.0)
    avance(x)
    droite(90.0)
    avance(x)
	}
  carre(100.0)
}

